@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.tvnplayer.pl"
        name="TVNPlayer"
-       version="1.0.4"
+       version="1.0.5"
        provider-name="thebedi">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
