@@ -1,3 +1,6 @@
+[B]1.0.5[/B]
+- naprawa tvnplayer
+
 [B]1.0.1[/B]
 - modified by en0x
 - dodanie proxy zeby mozna bylo ogladac z usa ;)
